--- a/Keys/src/UserInterface/Consultant/RequestMarketPlaceJPanel.form
+++ b/Keys/src/UserInterface/Consultant/RequestMarketPlaceJPanel.form
@@ -92,7 +92,8 @@
                 <Component class="javax.swing.JTable" name="jTable3">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="4" rowCount="0">
+                      <Table columnCount="5" rowCount="0">
+                        <Column editable="false" title="ID" type="java.lang.Object"/>
                         <Column editable="false" title="Name" type="java.lang.Object"/>
                         <Column editable="false" title="Status" type="java.lang.Object"/>
                         <Column editable="false" title="Item Type" type="java.lang.Object"/>
@@ -101,6 +102,11 @@
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
@@ -226,6 +232,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="firstNameTxt">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="SF Pro Text" size="14" style="0"/>
                 </Property>
@@ -305,13 +312,15 @@
             <Component class="javax.swing.JComboBox" name="productList">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="6">
+                  <StringArray count="8">
                     <StringItem index="0" value="Chair"/>
                     <StringItem index="1" value="Table"/>
                     <StringItem index="2" value="Bed"/>
                     <StringItem index="3" value="Heater"/>
                     <StringItem index="4" value="Cookware"/>
-                    <StringItem index="5" value="Bike-"/>
+                    <StringItem index="5" value="Bike"/>
+                    <StringItem index="6" value="Monitor"/>
+                    <StringItem index="7" value="Organizer"/>
                   </StringArray>
                 </Property>
               </Properties>
