--- a/Keys/src/UserInterface/MarketPlace/ConsultantRequest.form
+++ b/Keys/src/UserInterface/MarketPlace/ConsultantRequest.form
@@ -63,9 +63,9 @@
                   <Table columnCount="5" rowCount="0">
                     <Column editable="false" title="Id" type="java.lang.Object"/>
                     <Column editable="false" title="Name" type="java.lang.Object"/>
-                    <Column editable="false" title="Location" type="java.lang.Object"/>
                     <Column editable="false" title="Status" type="java.lang.Object"/>
-                    <Column editable="false" title="Response" type="java.lang.Object"/>
+                    <Column editable="false" title="MarketPlace" type="java.lang.Object"/>
+                    <Column editable="false" title="Quantity" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
