--- a/Keys/src/UserInterface/SysAdmin/SysAdminWorkAreaJPanel.form
+++ b/Keys/src/UserInterface/SysAdmin/SysAdminWorkAreaJPanel.form
@@ -434,6 +434,9 @@
                 </Property>
                 <Property name="focusPainted" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="governmentButtonActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="120" y="230" width="180" height="40"/>
