--- a/Keys/src/UserInterface/User/EmergencyReport.form
+++ b/Keys/src/UserInterface/User/EmergencyReport.form
@@ -274,11 +274,10 @@
             <Component class="javax.swing.JComboBox" name="emergencyBox">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
+                  <StringArray count="3">
                     <StringItem index="0" value="Medical"/>
                     <StringItem index="1" value="Fire"/>
-                    <StringItem index="2" value="Police"/>
-                    <StringItem index="3" value="Maintenace"/>
+                    <StringItem index="2" value="Maintenace"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -300,14 +299,14 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="400" width="220" height="40"/>
+                  <AbsoluteConstraints x="20" y="400" width="420" height="40"/>
                 </Constraint>
               </Constraints>
             </Component>
             <Component class="javax.swing.JButton" name="searchButton">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="33" red="33" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="SF Pro Text" size="14" style="1"/>
@@ -325,7 +324,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="290" y="400" width="150" height="39"/>
+                  <AbsoluteConstraints x="280" y="460" width="150" height="39"/>
                 </Constraint>
               </Constraints>
             </Component>
